# robot_haptic_controller

./: README.md
robot_haptic_controller/: CMakeLists.txt  TODO.md  dependencies.rosinstall  package.xml  readme.md
robot_haptic_controller/config/: RobotHapticController.xml  allegro_kuka.rviz  allegro_kuka_new.rviz  allegro_kuka_simple_visu.rviz
robot_haptic_controller/include/: RobotHapticController.h  globals.h  mathlib_eigen_conversions.h  publisher_helpers.h  robot_haptic_controller_helper.h  task_ravin.h  virtual_contact_helpers.h
robot_haptic_controller/launch/: allegro_kuka_state_publisher.launch  allegro_kuka_state_publisher_debug.launch  hand_demo_full.launch  hand_demo_full_simulation.launch  hand_only_demo.launch  hand_only_demo_simulation_objects.launch  lwr_robot_new.launch  lwr_robot_ravin_new.launch  lwr_robot_ravin_no_interface_TEST.launch  lwr_robot_ravin_rtk.launch  readme.md  rviz_allegro_kuka.launch  sim_replay.launch  sim_robot_cups_new.launch  sim_robot_new.launch  sim_robot_new_hand4.launch  sim_robot_ravin_new.launch  todo.md
robot_haptic_controller/launch/exploration_ressources/: exploration_ressources.launch
robot_haptic_controller/launch/helper/: run_robot.launch  run_with_params.launch  run_with_params_old.launch
robot_haptic_controller/launch/old/: lwr_robot_OLD.launch  lwr_robot_ravin.launch  lwr_robot_ravin_OLD.launch  rviz_allegro_kuka_nostatepublisher.launch  sim_robot_old.launch  sim_robot_ravin_old.launch
robot_haptic_controller/parameters/: my_gains_pd.yaml  param_gazebo.yaml  param_gazebo_cups.yaml  param_gazebo_exploration_ressources.yaml  param_gazebo_ravin.yaml  param_gazebo_spheres.yaml  param_hand_only_demo.yaml  param_hand_only_demo_simulation_objects.yaml  param_realrobot.yaml  param_realrobot_ravin.yaml  ravin_params.yaml  temporary_parameters.yaml
robot_haptic_controller/parameters/contact_levels/: contact_level_nothumb.yaml  contact_level_thumb.yaml  contact_level_thumb_last.yaml
robot_haptic_controller/parameters/finger_pos/: finger_pos_cup.yaml  finger_pos_default.yaml  finger_pos_default_hand4.yaml  finger_pos_grasp.yaml
robot_haptic_controller/parameters/keypoints/: irobot.yaml  mailbox.yaml
robot_haptic_controller/scripts/: jointMsgTalker.py  jointMsgTalkerAudio.py  move_object_2.py  object_perturb_2.py  object_presentation.py  object_presentation_10x.py  robot_talker_audio.py  sendRavinTask.py  sendRavinTrajMode.py
robot_haptic_controller/scripts/UDP/: load_msg_v2.py  save_msg_good_values.p
robot_haptic_controller/scripts/UDP/old/: load_msg.py  old_code.py  receive_udp_test.py  receive_udp_test_EMG.py  receive_udp_test_EMG_v2.py  send_udp_test.py
robot_haptic_controller/scripts/grasp_selector/: grasp_sender.py  grasp_sender_emg.py  grasps.py  gui.py  temp_joint_state_publisher.py
robot_haptic_controller/src/: RobotHapticController.cpp  mathlib_eigen_conversions.cpp  publisher_helpers.cpp  robot_haptic_controller_helper.cpp  task_ravin.cpp  virtual_contact_helpers.cpp
