<?xml version="1.0"?>
<package format="2">
  <name>robot_haptic_controller</name>
  <version>0.0.0</version>
  <description>The robot_haptic_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nisommer@epfl.ch">nisommer</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/HandHapticController</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="nisommer@epfl.ch">Nicolas Sommer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>message_generation</build_depend>  -->
  <depend>message_runtime</depend>

  <depend>mathlib</depend>
  <depend>robotlib</depend>
  <depend>std_tools</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>tek_patch</depend>
  <depend>impedance_controller</depend>
  <depend>tf</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2</depend>
  <depend>kdl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>joint_limits_interface</depend>
  <depend>gazebo_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>


</package>
